helm/platform/whoami/k8s/40-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-internal
  namespace: whoami
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.smart.home`)
      kind: Rule
      services:
        - name: whoami
          port: 80
  tls:
    secretName: whoami-internal-tls
    # secretName: smarthome-wildcard-tls

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-external
  namespace: whoami
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whoami.brandonhowlett.com`)
      kind: Rule
      services:
        - name: whoami
          port: 80
  # tls:
  #   secretName: home-assistant-external-tls
